--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "proxy": "http://localhost:5000",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm install"
   },
   "eslintConfig": {
     "extends": [
